--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -25,5 +25,6 @@
         </form>
         <div id="message"></div>
     </div>
+    <script src="static/js/register.js"></script>
     <script src="static/js/login.js"></script>
 </body>
