--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -16,6 +16,7 @@
               <button onclick="switchLanguage('zh')">中文</button>
               <button onclick="switchLanguage('en')">English</button>
             </div>
+            <button onclick="logout()" data-i18n="todos_logout">注销</button>
         </div>
 
         <!-- 视图切换 -->
