fix password issue

--- a/templates/login/register.html
+++ b/templates/login/register.html
@@ -28,7 +28,7 @@
         <div class="logo">
             <i class="fas fa-user-plus"></i>
         </div>
-        <h2>创建 DeepTodo 账户</h2>
+        <h2>创建 DeepTodos 账户</h2>
         <form id="registerForm">
             <div class="input-group">
                 <label for="username">用户名</label>
