--- a/static/css/login.css
+++ b/static/css/login.css
@@ -116,6 +116,7 @@ body {
     position: relative;
     overflow: hidden;
     transition: all 0.4s ease;
+    padding-bottom: 100px;
 }
 
 .login-container::before {
@@ -430,4 +431,8 @@ button[type="submit"]:hover {
         height: 45px;
         font-size: 18px;
     }
+}
+
+.icp {
+    font-size: 15px;
 }
