--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DeepTodo 登录</title>
+    <title>DeepTodos 登录</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome/fontawesome-free-6.4.0-web/css/all.min.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}" />
   </head>
@@ -70,9 +70,7 @@
 
       <div id="message"></div>
 
-      <div class="ICP">
-        <a href="http://beian.miit.gov.cn/" target="_blank">黑ICP备2025041634号</a>
-      </div>
+      <a class="icp" href="http://beian.miit.gov.cn/" target="_blank">黑ICP备2025041634号</a>
     </div>
 
     <script src="static/js/login.js"></script>
