--- a/templates/login/register.html
+++ b/templates/login/register.html
@@ -73,7 +73,33 @@
         </div>
 
         <div id="message"></div>
+
+        <div class="footer">
+            <div class="icp-container">
+                <a href="http://beian.miit.gov.cn/" target="_blank" class="icp-link">
+                    <i class="fas fa-shield-alt"></i>
+                    <span>黑ICP备2025041634号</span>
+                </a>
+                <div class="copyright">
+                    © 2025 deeptodos.com 版权所有
+                </div>
+            </div>
+
+            <div class="security-badges">
+                <div class="badge">
+                    <i class="fas fa-lock"></i>
+                    <span>安全加密</span>
+                </div>
+                <div class="badge">
+                    <i class="fas fa-user-shield"></i>
+                    <span>隐私保护</span>
+                </div>
+            </div>
+        </div>
+        
     </div>
 
     <script src="static/js/register.js"></script>
 </body>
+
+</html>
