公安网备相关

--- a/templates/login/changePassword.html
+++ b/templates/login/changePassword.html
@@ -8,7 +8,7 @@
     <title>DeepTodos - 更改密码</title>
     <link rel="stylesheet"
         href="{{ url_for('static', filename='css/font-awesome/fontawesome-free-6.4.0-web/css/all.min.css') }}">    
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/changePassword.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/login/changePassword.css') }}">
 </head>
 
 
@@ -109,5 +109,5 @@
 
     </div>
 
-    <script src="static/js/changePassword.js"></script>
+    <script src="static/js/login/changePassword.js"></script>
 </body>
