--- a/templates/login/register.html
+++ b/templates/login/register.html
@@ -8,7 +8,7 @@
     <title>DeepTodos - 注册新用户</title>
     <link rel="stylesheet"
         href="{{ url_for('static', filename='css/font-awesome/fontawesome-free-6.4.0-web/css/all.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/register.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/login/register.css') }}">
 </head>
 
 <body>
@@ -99,7 +99,7 @@
         
     </div>
 
-    <script src="static/js/register.js"></script>
+    <script src="static/js/login/register.js"></script>
 </body>
 
 </html>
