fix some issues for terms of service

--- a/templates/login/termsOfService.html
+++ b/templates/login/termsOfService.html
@@ -14,12 +14,12 @@
     <div class="container">
         <header>
             <div class="logo">
-                <div class="logo-icon">
-                    <i class="fas fa-calendar-alt"></i>
-                </div>
-                <div class="logo-text">日程助手</div>
+                <!-- <div class="logo-icon"> -->
+                    <i class="fas fa-tasks"></i>
+                <!-- </div> -->
+                <div class="logo-text">DeepTodos</div>
             </div>
-            <p class="tagline">DeepTodos - 安全、私密、高效</p>
+            <p class="tagline">个人日程管理工具 - 安全、私密、高效</p>
         </header>
 
         <div class="content">
@@ -83,7 +83,7 @@
                 <h2>联系我们</h2>
                 <p>如果您对这些服务条款有任何疑问，请通过以下方式与我们联系：</p>
                 <p>电子邮箱：jarod_father@163.com</p>
-                <p>最后更新日期：2023年10月15日</p>
+                <p>最后更新日期：2025年07月20日</p>
             </div>
         </div>
 
