--- a/frontend/deeptodos/src/styles/main.scss
+++ b/frontend/deeptodos/src/styles/main.scss
@@ -1,92 +1,4 @@
-// 全局样式
-
-// 所选颜色
-$PureWhite: rgba(255, 255, 255, 1);
-$JadeGreen: rgba(160, 193, 152, 0.4);
-$BrightGreen: rgba(160, 193, 152, 1);
-$Orange: rgba(255, 71, 0, 0.55);
-$BrightPink: rgba(248, 152, 152, 0.85);
-$LightGray: rgba(153, 153, 153, 1);
-$PaleYellow: rgba(255, 251, 240, 1);
-$LuminousYellow: rgba(246, 230, 22, 0.85);
-$Black: rgba(0, 0, 0, 1);
-
-// 全局字体
-@font-face {
-  font-family: 'Source Han Sans CN';
-  src: url('../assets/fonts/SourceHanSansCN-Regular.woff2') format('woff2'),
-       url('../assets/fonts/SourceHanSansCN-Regular.woff') format('woff');
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Source Han Sans CN';
-  src: url('../assets/fonts/SourceHanSansCN-Bold.woff2') format('woff2'),
-       url('../assets/fonts/SourceHanSansCN-Bold.woff') format('woff');
-  font-weight: 700;
-  font-style: normal;
-  font-display: swap;
-}
-
-// 说明文字 深色  思源黑体 CN  24
-@mixin global-font-descriptionDark() {
-    color: var(--Black, $Black);
-    font-family: Source Han Sans CN;
-    font-style: Regular;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 36px;
-    letter-spacing: 0.04px;
-    text-align: left;
-}
-
-// 说明文字 浅色  思源黑体 CN  24
-@mixin global-font-descriptionLight() {
-    color: var(--LightGray, $LightGray);
-    font-family: Source Han Sans CN;
-    font-style: Regular;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 36px;
-    letter-spacing: 0.04px;
-    text-align: left;
-}
-
-// 正文  思源黑体 CN  20
-@mixin global-font-mainBody() {
-    color: var(--Black, $Black);
-    font-family: Source Han Sans CN;
-    font-style: Regular;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 30px;
-    letter-spacing: 0.04px;
-    text-align: left;
-}
-
-// 正文加粗  思源黑体 CN  20
-@mixin global-font-mainBodyBold() {
-    color: var(--Black, $Black);
-    font-family: Source Han Sans CN;
-    font-style: Bold;
-    font-size: 20px;
-    font-weight: 700;
-    line-height: 30px;
-    letter-spacing: 0.04px;
-    text-align: left;
-}
-
-// 已完成 思源黑体 CN  20
-@mixin global-font-done() {
-    color: var(--LightGray, $LightGray);
-    font-family: Source Han Sans CN;
-    font-style: Regular;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 30px;
-    letter-spacing: 0.04px;
-    text-align: left;
-    text-decoration-line: line-through;
-}
+@use 'fonts';
+@use 'base';
+@use 'variables';
+@use 'mixins';
