add some components

--- a/frontend/deeptodos/src/assets/styles/_fonts.scss
+++ b/frontend/deeptodos/src/assets/styles/_fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'Source Han Sans CN';
+    font-family: 'Source Han Sans CN-Regular';
     src: url('../assets/fonts/SourceHanSansCN-Regular.woff2') format('woff2'),
         url('../assets/fonts/SourceHanSansCN-Regular.woff') format('woff');
     font-weight: 400;
@@ -8,7 +8,7 @@
 }
 
 @font-face {
-    font-family: 'Source Han Sans CN';
+    font-family: 'Source Han Sans CN-Bold';
     src: url('../assets/fonts/SourceHanSansCN-Bold.woff2') format('woff2'),
         url('../assets/fonts/SourceHanSansCN-Bold.woff') format('woff');
     font-weight: 700;
