--- a/frontend/deeptodos/src/assets/styles/_mixins.scss
+++ b/frontend/deeptodos/src/assets/styles/_mixins.scss
@@ -1,8 +1,8 @@
 // 全局字体样式 混入
 // 说明文字 深色  思源黑体 CN  24
 @mixin global-font-descriptionDark() {
-    color: $Black;
-    font-family: $font-family-primary;
+    color: $black;
+    font-family: $font-family-regular;
     font-style: Regular;
     font-size: $font-size-description;
     font-weight: 400;
@@ -13,8 +13,8 @@
 
 // 说明文字 浅色  思源黑体 CN  24
 @mixin global-font-descriptionLight() {
-    color: $LightGray;
-    font-family: $font-family-primary;
+    color: $light-gray;
+    font-family: $font-family-regular;
     font-style: Regular;
     font-size: $font-size-description;
     font-weight: 400;
@@ -24,9 +24,9 @@
 }
 
 // 正文  思源黑体 CN  20
-@mixin global-font-mainBody() {
-    color: $Black;
-    font-family: $font-family-primary;
+@mixin global-font-main_body() {
+    color: $black;
+    font-family: $font-family-regular;
     font-style: Regular;
     font-size: $font-size-body;
     font-weight: 400;
@@ -37,8 +37,8 @@
 
 // 正文加粗  思源黑体 CN  20
 @mixin global-font-mainBodyBold() {
-    color: $Black;
-    font-family: $font-family-primary;
+    color: $black;
+    font-family: $font-family-bold;
     font-style: Bold;
     font-size: $font-size-body;
     font-weight: 700;
@@ -49,8 +49,8 @@
 
 // 已完成 思源黑体 CN  20
 @mixin global-font-done() {
-    color: $LightGray;
-    font-family: $font-family-primary;
+    color: $light-gray;
+    font-family: $font-family-regular;
     font-style: Regular;
     font-size: $font-size-body;
     font-weight: 400;
@@ -66,14 +66,14 @@
 @mixin global-box-shadow-selection-box-left() {
     border: $border-base;
     /* Outer shadow - on the left side of the selection b */
-    box-shadow: -4px 4px 0px 0px $Black;
+    box-shadow: -4px 4px 0px 0px $black;
 }
 
 // 按钮外侧阴影 - 右侧
 @mixin global-box-shadow-selection-box-right() {
     border: $border-base;
     /* Outer shadow - on the right side of the selection b */
-    box-shadow: 4px 4px 0px 0px $Black;
+    box-shadow: 4px 4px 0px 0px $black;
 }
 
 // 全局边框样式 混入
@@ -81,5 +81,5 @@
 @mixin global-box-shadow-border-right() {
     border: $border-base;
     /* Outer shadow - Right side of the border */
-    box-shadow: 6px 8px 0px 0px $Black;
+    box-shadow: 6px 8px 0px 0px $black;
 }
