--- a/frontend/deeptodos/src/assets/styles/_base.scss
+++ b/frontend/deeptodos/src/assets/styles/_base.scss
@@ -1,30 +1,30 @@
 /* 全局重置和基础设置 */
-// html {
-//   font-size: 62.5%; /* 1rem = 10px */
-//   box-sizing: border-box;
-// }
-
-// *,
-// *::before,
-// *::after {
-//   box-sizing: inherit;
-// }
-
-* {
+html {
+  font-size: 62.5%; /* 1rem = 10px */
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
 }
 
-ol,ul,menu {
-  padding-inline-start: 0;
-  list-style: none;
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
 }
 
-ol li {
-  list-style-position: inside;
-}
+// * {
+//   box-sizing: border-box;
+//   margin: 0;
+//   padding: 0;
+// }
 
-ol li::marker, ul li::before {
-  letter-spacing: 0;
-}
+// ol,ul,menu {
+//   padding-inline-start: 0;
+//   list-style: none;
+// }
+
+// ol li {
+//   list-style-position: inside;
+// }
+
+// ol li::marker, ul li::before {
+//   letter-spacing: 0;
+// }
