--- a/frontend/deeptodos/src/assets/styles/_variables.scss
+++ b/frontend/deeptodos/src/assets/styles/_variables.scss
@@ -4,6 +4,7 @@ $jade-green: rgba(160, 193, 152, 0.4000000059604645);
 $bright-green: rgba(160, 193, 152, 1);
 $orange: rgba(255, 71, 0, 0.550000011920929);
 $bright-pink: rgba(248, 152, 152, 0.8500000238418579);
+$bright-pink-hover: rgba(248, 152, 152, 1);
 $light-gray: rgba(153, 153, 153, 1);
 $pale-yellow: rgba(255, 251, 240, 1);
 $luminous-yellow: rgba(246, 230, 22, 0.8500000238418579);
